syntax = "proto3";

option go_package = "github.com/paulja/gokvs/clerk";

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {}

message AppendRequest {
  string key = 1;
  string arg = 2;
}

message AppendResponse {
  string old_value = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

service ClerkService {
    rpc Put(PutRequest) returns (PutResponse);
    rpc Append(AppendRequest) returns (AppendResponse);
    rpc Get(GetRequest) returns (GetResponse);
}
